--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <h1>Select Doctors</h1>
-    <div id="card""></div>
+    <div id="card"></div>
 
 
     <script src="app.js"></script>
